--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -57,6 +57,7 @@
  GFX_SPEVNT_Catholic_Reunification_DESC:0 "当最后一位主教在南京主教座堂为国家祈祷时，圣教会已悄然接掌了中华的命运。十字架不仅矗立在每座城市的高处，也进入了亿万家庭的心灵深处。这里不再是混乱与偶像的温床，而是恩典之邦、信仰之城。天主之爱穿越血缘、阶级与方言，藉由教会的母性，抚慰所有曾在战乱与罪恶中流离失所的灵魂。\n\n这不是一次征服，而是一场归乡。中华并未沦为教权的殖民地，而是在永恒真理中找到了自己的位置。"
 
  has_united_china:0 "中国已经统一"
+ china_is_the_chinese_unifier_tt: "§Y已将中国归于一统。§!"
 
  chinese_unification_desc: "数十年来的外来帝国主义、政治反覆和国内动乱令天朝丧失了中央权威，大清帝国风雨飘摇之际，它的软弱催生了一批新的地方军阀。辛亥革命使得国家的动荡进一步加剧，加入革命的将军们夺取了不少省份，并着手建立起由军队军官、亲密商人、地主士绅、友善知识分子和政府官员组成的复杂网络。\n\n风吹过雨打过，我们共同的国族认同仍然存在，全国各地，各路人马都致力于统一国家，以自己的构想重建中华。各方势力都利用自己的恩庇网络、外国支持和不断壮大的军队，在城市和农村竞争影响力。不过，中国纷繁的军阀时代令人眼花缭乱，公然开战并非竞争的唯一途径。外国入侵近在眼前，而结盟背盟的故事也在不断上演......"
  kr_integrate_Kashmir_province:0 "整合克什米尔地区"
@@ -65,20 +66,98 @@
  china_declare_unification: "宣告中国重新统一"
  china_declare_unification_desc: "我们的敌人已经被粉碎了，那些之前肆意宣称自己领导全国的人也不敢再出声了。我们现在已经是几乎全中国的统治者，剩下唯一一件要做的事就是正式宣告我们对全国的领导。无论如何，我们是军阀时代的胜利者，我们有责任领导中国走向更美好的未来。"
 
+ CHN_small_arms_industry_organisation: "中国轻武器企业"
+ CHN_support_equipment_industry_organisation: "中国轻型装备企业"
+ CHN_artillery_industry_organisation: "中国火炮企业"
+ CHN_transportation_industry_organisation: "中国载具企业"
+ CHN_naval_industry_organisation: "中国海军企业"
+
  china_mio_arsenal_integration_decision_category: "建立中国本土国防企业"
  china_mio_arsenal_integration_decision_category_desc: "几十年的内战给中国留下的希望并不多，其中之一，便是各势力投入大笔军费为现代军工复合体奠定的坚实基础。但是，困难也有不少：腐败、缺乏经验和战时混乱等都是常见问题；而且中国士兵手里的武器要么是进口的，要么是国外设计、国内制造的，这制约了国内军工业的发展。此外，由于军阀的地方主义，大部分大型兵工厂设施都非常分散，严重缺乏协调，在统一之路上，我们必须占领、整合这些军工企业，充分释放中国这个工业巨人的潜力！"
  CHN_integrate_major_navy_HK: "整合天星小轮"
- CHN_integrate_major_navy_zhao_xing: "整合肇兴轮船"
  CHN_integrate_major_arsenal_SQI: "整合七二炮铸造厂"
- CHN_integrate_minor_small_arms_arsenal_jinan: "整合济南兵工厂"
- CHN_integrate_minor_small_arms_arsenal_jinan_desc: "山东兵工厂由山东巡抚丁宝桢在1875年作为山东机器局而首建，并在1883年后的几年内得到了生产武器所需要的机器。随着这里开始生产西方设计的一系列轻武器，并迅速地扩展了其厂房占地以快速提升步枪和其他步兵装备的产量，北洋政府将其更名为山东兵工厂。在张宗昌的统治之下，该厂被命名为济南兵工厂并进一步发掘出了生产潜力。"
- CHN_integrate_minor_small_arms_arsenal_tie_ma: "整合铁马空气压缩厂"
+ CHN_integrate_major_arsenal_decision: "[CHN_integrate_major_arsenal_scripted_loc]"
+ CHN_integrate_major_arsenal_decision_desc: "[CHN_integrate_major_arsenal_desc_scripted_loc]"
+ CHN_integrate_major_arsenal_shenyang_key: "整合沈阳兵工厂"
+ CHN_integrate_major_arsenal_shenyang_desc_key: "沈阳兵工厂也许是奉系军阀最为标志性的一大成就。张作霖在日本顾问的帮助下建立了沈阳兵工厂，并用以维持自己对满洲的控制，进而满足他将中国统一在自己的旗帜下的雄心。尽管其正式定名为只是“东三省兵工厂”，但实际上已冠绝中国，在20年代的中国以能够生产出比其他全部兵工厂加在一起还要多的武器而自夸。借助东北的高质量工业水平和丰富的自然资源，沈阳兵工厂不仅成为了生产的中心，还建立了巨大的后勤供应链（包括部队口粮和制服的集中生产）以及武器的自主研发。在过去，张大帅尚不能完全摆脱中国对外国武器进口的依赖，而也许经由我们的管理，沈阳兵工厂能够在建立本土军工的过程中发挥重要作用。"
+ CHN_integrate_major_arsenal_taiyuan_key: "整合太原兵工厂"
+ CHN_integrate_major_arsenal_taiyuan_desc_key: "太原兵工厂是山西那可敬的督理阎锡山在其首府建立的巨型复合体。有句话叫军事是正义的后盾，阎锡山把他宝贵的兵工厂视为维护山西自治的基石。工厂以山西机器局的名义在1912年首建并在几十年里经历了数次迭代。工厂为晋系生产大量的步枪、机枪、汽车、手雷和弹药。不像其他军阀的兵工厂（包括中央政府的工厂），太原兵工厂因其能够生产可观数量火炮的零件与弹药的罕见产能而闻名。占领这里可以让我们得到一座无价的北方工厂来增强我们的军工实力。"
+ CHN_integrate_major_arsenal_gongxian_key: "整合巩县兵工厂"
+ CHN_integrate_major_arsenal_gongxian_desc_key: "1914年，袁世凯在河南亲自筹划督建了巩县兵工厂。利用其优越地理位置及便于获得原材料的优势，海军上将萨镇冰与雇佣的德国工程师使用购买的美国设备建立了这座当时中国首屈一指的现代化兵工厂。被占领时，该工厂相对完整，这是我们在中原地区的重要收获，必须快速将其整合到我们的国防工业当中。"
+ CHN_integrate_major_arsenal_hanyang_key: "整合汉阳兵工厂"
+ CHN_integrate_major_arsenal_hanyang_desc_key: "汉阳兵工厂是中国最大、历史最悠久、最重要的现代化兵工厂，建于1891年，初名湖北枪炮厂，1904年改名湖北兵工厂。它的建设耗时很长，还使用了大量从海军挪用而来的资金。这里能够生产火炮、步枪和弹药，为大量军队提供了装备，其中也包括辛亥革命的起源——武昌起义部队；从这里诞生的汉阳八八式（原型为德国的格韦尔1888步枪）和刘式步枪（由时任汉阳兵工厂总办刘庆恩将军设计）是军阀时代最有代表性的武器。"
+ CHN_integrate_major_arsenal_guangdong_key: "整合广东兵工厂"
+ CHN_integrate_major_arsenal_guangdong_desc_key: "由两广总督在1873年首建的广东兵工厂，最初是以广东机器局的名义来开始生产轻武器的。渐渐地，工厂得到了扩建与现代化，建立了新的厂房而且合并了其他的兵工厂（比如增埗兵工厂）以形成了一个广东强大的军工复合体。在辛亥革命和随后的种种战争中，广东成为一连串南方政府的中心，而广东兵工厂的地位只会在这一过程中继续提高。在其他地方兵工厂，例如石井、琶江等兵工厂甚至是一个专门生产防毒面罩的工厂的共同协作下，南国的兵工厂群将会成为实现民族复兴的强大助力。"
+ CHN_integrate_minor_small_arms_arsenal_decision: "[CHN_integrate_minor_small_arms_arsenal_scripted_loc]"
+ CHN_integrate_minor_small_arms_arsenal_decision_desc: "[CHN_integrate_minor_small_arms_arsenal_desc_scripted_loc]"
+ CHN_integrate_minor_small_arms_arsenal_jinan_key: "整合济南兵工厂"
+ CHN_integrate_minor_small_arms_arsenal_jinan_desc_key: "山东兵工厂由山东巡抚丁宝桢在1875年作为山东机器局而首建，并在1883年后的几年内得到了生产武器所需要的机器。随着这里开始生产西方设计的一系列轻武器，并迅速地扩展了其厂房占地以快速提升步枪和其他步兵装备的产量，北洋政府将其更名为山东兵工厂。在张宗昌的统治之下，该厂被命名为济南兵工厂并进一步发掘出了生产潜力。"
+ CHN_integrate_minor_small_arms_arsenal_fallback_key: "整合[FROM.GetName]的轻武器工厂"
+ CHN_integrate_minor_small_arms_arsenal_fallback_desc_key: "[FROM.GetName]已经成为一个相当大的轻武器生产中心，多年来这里为当地军阀生产了大量枪支弹药和手榴弹。如今我们成为了这里的新主人，必须充分利用这里的技术为国家服务。"
+ CHN_integrate_major_arsenal_shanghai_key: "整合上海兵工厂"
+ CHN_integrate_major_arsenal_shanghai_desc_key: "江南制造总局由李鸿章与曾国藩于1865年自强运动期间在上海创立，旨在为清廷提供新式火器。尽管历经数十年政治动荡，该厂仍实现了显著扩建与发展。于1917年更名为上海兵工厂后，其成为机床及现代武器装备最具生产力的制造商之一，产品涵盖重机枪、迫击炮、野战炮乃至高射炮。"
+ CHN_integrate_minor_small_arms_arsenal_chengdu_key: "整合成都兵工厂"
+ CHN_integrate_minor_small_arms_arsenal_chengdu_desc_key: "华东地区的战乱，再加上包括清廷权威崩溃后的新近局势发展，推动部分生产设施向内地迁移。这些迁移究竟是计划周详还是仓促投机之举尚有争议，但成都始终积极接收，由此发展出蓬勃的国防产业。"
+ CHN_integrate_minor_small_arms_arsenal_guizhou_key: "整合贵州兵工厂"
+ CHN_integrate_minor_small_arms_arsenal_guizhou_desc_key: "贵州兵工厂由周西成于1926年8月在贵阳创建，系合并其于1923年与1924年分别设立的赤水兵工厂、沿河枪厂而成。此二厂原为周西成争夺贵州统治权而生产手枪与步枪，随着无烟火药厂的并入大幅提升产能，贵州兵工厂开始为周氏部队生产机枪、手榴弹、炮弹乃至地雷。"
+ CHN_integrate_minor_small_arms_arsenal_guangxi_key: "整合广西兵工厂"
+ CHN_integrate_minor_small_arms_arsenal_guangxi_desc_key: "广西机械局原于1899年在龙城成立，旨在为西南边疆的中国军队生产武器。该局于1914年因火灾焚毁后迁至南宁，起初被陆荣廷用于武装桂军，后于1924年被李宗仁、黄绍竑接管，合并各自兵工厂组建广西兵工厂，为其部队生产步枪。"
+ CHN_integrate_major_arsenal_jinling_key: "整合金陵兵工厂"
+ CHN_integrate_major_arsenal_jinling_desc_key: "金陵机器制造局由晚清改革家李鸿章于1865年在西天寺旧址创建，迅速成为华东地区重要的军工生产重镇。这座被誉为“中国民族军事工业摇篮”的兵工厂，以批量生产南直系军阀所需步枪著称。更名为金陵兵工厂后，该厂成为孙传芳参照德国模式打造现代化军队的核心基地。在德国技术顾问的指导下，这座兵工厂已完成现代化改造，成为八省联合的军工生产重镇。"
+ CHN_integrate_major_arsenal_fallback_key: "整合[FROM.GetName]的大型兵工厂"
+ CHN_integrate_major_arsenal_fallback_desc_key: "这里的大规模军工生产设施质量上乘，或者说至少值得政府大量关注、投资。必须将其整合进我们的军工体系。"
+ CHN_integrate_minor_support_equipment_arsenal_decision: "[CHN_integrate_minor_support_equipment_arsenal_scripted_loc]"
+ CHN_integrate_minor_support_equipment_arsenal_decision_desc: "[CHN_integrate_minor_support_equipment_arsenal_desc_scripted_loc]"
+ CHN_integrate_minor_light_arms_arsenal_kunming_key: "云南兵工厂"
+ CHN_integrate_minor_light_arms_arsenal_kunming_desc_key: "成立于1884年的云南机器局（位于昆明）以维修和生产火器起家，云南兵工厂于1905年开始生产现代步枪。清朝灭亡后更名的该厂开始生产手榴弹和小型炮弹，并在云南地方当局管理期间为二次革命和护国运动中的滇军提供武器。该厂于1927年获得扩建。"
+ CHN_integrate_minor_light_arms_arsenal_zhuzhou_key: "扩建湖南兵工厂"
+ CHN_integrate_minor_light_arms_arsenal_zhuzhou_desc_key: "随着直系军阀的需求增长，巩县兵工厂的部分专家前往刚平定的湖南省，在株洲的原有兵工厂基础上进行扩建，建立了一座轻武器工厂，该厂由谭延闿于1912年首建，并由赵恒惕于1924年重振。虽然由于八省联合崩溃带来的动荡，他们没能实现建设一家顶尖工厂的目标，但由于湖南的通衢地位，我们还是应当投资扩建这里的设施。"
+ CHN_integrate_minor_light_arms_arsenal_dihua_key: "扩建迪化兵工厂"
+ CHN_integrate_minor_light_arms_arsenal_dihua_desc_key: "几十年前，俄罗斯和英国在中亚尔虞我诈，新疆巡抚饶应祺高瞻远瞩，认为外国势力可能会入侵这片远在中国最西部的边疆之地。1897年，经清政府许可，他从上海购置德国机器，正式创办新疆机器局。由于选址不当，夏季和冬季水源干涸，工厂生产困难。\n\n但是，后来的军阀明智地加以投资，并将其更名为迪化兵工厂，让它能够生产新武器补充部队，还能修复旧武器。对付叛军时，这里生产的武器让他们占据了上风，如今我们成了这里的新主人，应该学习他们节俭奋斗的精神。"
+ CHN_integrate_minor_light_arms_arsenal_fallback_key: "于[FROM.GetName]扩建轻武器工厂"
+ CHN_integrate_minor_light_arms_arsenal_fallback_desc_key: "[FROM.GetName]有成为轻武器制造中心的潜力，能够生产大量迫击炮、被服、口粮等支援装备。如今我们成为了这里的新主人，必须充分利用这里的技术为国家服务。"
+ CHN_integrate_minor_artillery_arsenal_decision: "[CHN_integrate_minor_artillery_arsenal_scripted_loc]"
+ CHN_integrate_minor_artillery_arsenal_decision_desc: "[CHN_integrate_minor_artillery_arsenal_desc_scripted_loc]"
+ CHN_integrate_minor_artillery_arsenal_lanzhou_key: "扩建兰州兵工厂"
+ CHN_integrate_minor_artillery_arsenal_lanzhou_desc_key: "晚清时期，1871年，陕甘总督左宗棠创办了兰州机器局。他雇佣当地匠人，从国外购入必要的机器，通过协调自己治下兰州和西安的工业设施，他建立了一个相当成功的军械生产中心，生产的枪支、火炮和弹药帮助他平定陕甘、收复新疆，但在1882年，机器局不幸停办。\n\n后来，虽然基础设施和人员都已经流失或者过时，但军阀还是重新开办了这座工厂。在内陆深处建立新火炮生产点并无坏处，这里的前任主人肯定也这么想，只不过他们没能完全实现。"
+ CHN_integrate_minor_artillery_arsenal_fallback_key: "扩大[FROM.GetName]的火炮生产"
+ CHN_integrate_minor_artillery_arsenal_fallback_desc_key: "[FROM.GetName]有成为大型武器生产中心的潜力，这里生产的大量重炮和炮弹可以用于满足扩军带来的需求。如今我们成为了这里的新主人，必须充分利用这里的技术为国家服务。"
+ CHN_integrate_major_dockyard_decision: "[CHN_integrate_major_dockyard_scripted_loc]"
+ CHN_integrate_major_dockyard_decision_desc: "[CHN_integrate_major_dockyard_desc_scripted_loc]"
+ CHN_integrate_major_dockyard_yingkou_key: "整合营口造船厂"
+ CHN_integrate_major_dockyard_yingkou_desc_key: "营口港位于渤海战略要地，可以控制大辽河与辽东湾。由于大连被日本控制，营口实际上是奉系控制的唯一一个港口，他们投入了相当的资金（虽然还是不够）将其打造为奉系舰队的基地。显然他们从日本盟友那里学到了很多，我们必须利用这些技术发展我们的舰队。"
+ CHN_integrate_major_dockyard_jiangnan_key: "整合江南造船厂"
+ CHN_integrate_major_dockyard_jiangnan_desc_key: "江南造船厂创立于1865年，主要从事军舰和民船的建造、修理和改造。它毗邻长江，大部分设施坐落于大港上海，是中国首屈一指的造船中心。它曾长期受到北洋政府的强力控制，但使馆城市的建立大大改变了这一局面。不过，外部的投资和专业知识还是让它获益不少，我们必须控制这座船厂，未来才有机会与列强平起平坐。"
+ CHN_integrate_major_dockyard_mawei_key: "整合福州船政局"
+ CHN_integrate_major_dockyard_mawei_desc_key: "福州船政局，又称马尾造船厂，建于晚清时期，由李鸿章、左宗棠创办，距闽江入海口三十余公里。凭借福建引以为傲的海军传统和海军院校，船政局建设了一座西式设计的造船厂、一座金属锻造厂，以及配套的航海和海军工程院校。后来，船政局因战火而受损，但在使馆城市治下得到了重建，依然名声在外。福州已经回归，我们必须充分发挥船政局的力量，建设现代化海军。"
+ CHN_integrate_major_dockyard_whampoa_key: "整合黄埔船坞公司"
+ CHN_integrate_major_dockyard_whampoa_desc_key: "香港黄埔船坞公司成立于1866年，创始人为德忌利士·林柏（道格拉斯·拉普雷克）和汤马士·修打兰（托马斯·萨瑟兰），通常简称为“黄埔船坞”或“九龙船坞”。上世纪七十年代，该公司垄断了珠江三角洲的造船业。粤港地区历来是外贸中心，南中国海的地理位置优势既是一笔财富，也是众人觊觎的目标，我们应当整合这些造船设施为海军所用。"
+ CHN_integrate_major_dockyard_fallback_key: "整合[FROM.GetName]的大型造船厂"
+ CHN_integrate_major_dockyard_fallback_desc_key: "[FROM.GetName]已经成为一个相当大的造船中心，拥有强大的干船坞、造船厂和海军训练设施。如今我们成为了这里的新主人，必须充分利用这里的技术为国家服务。"
+ PRC_cheng_li_zhong_gong_ye_bu: "成立重工业部"
+ PRC_cheng_li_zhong_gong_ye_bu_desc: "我们的国防将获得巩固，不允许任何帝国主义者再来侵略我们的国土。我们将不但有一个强大的陆军，而且有一个强大的空军和一个强大的海军。尽快建设国防工业，生产出武器装备精良的人民解放军，是摆在新中国面前一项十分紧迫而又艰巨的任务。要用强有力的手段进行集中计划、动员、调集和配置经济资源，集中极为有限的人力、物力、财力优先发展军事工业。"
+ PRC_HNN_faw_motors_organisation: "成立一汽集团"
+ PRC_HNN_faw_motors_organisation_desc: "一汽集团由重工业部下辖的汽车工业筹备组组织建立。"
+ PRC_HNN_tiema_motors_organisation: "成立第二机械工业部"
+ PRC_HNN_tiema_motors_organisation_desc: "第二机械工业部是重工业部下辖的分管军工的部门，主管枪支弹药、炸药、坦克、航空工业，以及军工电信业务。"
 
- SQI_jinan_arsenal_organisation_unlock: "已整合济南兵工厂"
  SHC_Star_Ferry_organisation_unlock: "已整合天星小轮"
- SQI_zao_xin_lun_chuan_organisation_unlock: "已整合肇兴轮船"
  SQI_seventy_two_cannon_artillery_foundry_unlock: "已整合七二炮铸造厂"
- HNN_tiema_organisation_unlock: "已整合铁马空气压缩厂"
+ LEC_jiangnan_shipyard_organisation_unlock: "已整合江南造船厂"
+ China_mio_trait_integrated_shenyang: "已整合沈阳兵工厂"
+ China_mio_trait_integrated_taiyuan: "已整合太原兵工厂"
+ China_mio_trait_integrated_shanghai: "已整合上海兵工厂"
+ China_mio_trait_integrated_gongxian: "已整合巩县兵工厂"
+ China_mio_trait_integrated_guangdong: "已整合广东兵工厂"
+ China_mio_trait_integrated_jinling: "已整合金陵兵工厂"
+ China_mio_trait_integrated_hanyang: "已整合汉阳兵工厂"
+ integrated_shanghai: "已整合上海兵工厂"
+ integrated_shenyang: "沈阳兵工厂已整合"
+ integrated_taiyuan: "太原兵工厂已整合"
+ integrated_gongxian: "巩县兵工厂已整合"
+ integrated_hanyang: "汉阳兵工厂已整合"
+ integrated_guangdong: "广东兵工厂已整合"
+ integrated_jinling: "已整合金陵兵工厂"
 
  northern_zhili: "§z北直系§!"
  southern_zhili: "§m南直系§!"
@@ -230,3 +309,6 @@
  CHN_germangangs_aligned: "所属：§g帝国公约§!"
 
  KR_diplomatic_row: "外交纠纷"
+
+ TRIGGER_OWNS_ANY_STATE_OF: "拥有以下任意地区："
+ TRIGGER_NOT_OWNS_ANY_STATE_OF: "不拥有以下任意地区："
