--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -516,12 +516,22 @@
  shuikoushan_mining:0 "水口山矿务局"
  hengyang_arsernal:0 "衡阳兵工厂"
  zhuzhou_artillery:0 "株洲炮兵技术研究处"
- HNN_tie:0 "铁马空气压缩厂"
- HNN_tie_mio_desc:0 "坦克设计商\n§L铁马空气压缩厂原身为豫丰纺织机械厂，是西南地区最大的纺织加工厂。§!"
+ HNN_tie:0 "第二机械工业部"
+ HNN_tie_mio_desc:0 "坦克设计商\n§L第二机械工业部是重工业部下辖的分管军工的部门，主管枪支弹药、炸药、坦克、航空工业，以及军工电信业务。§!"
  HNN_faw_motors:0 "中国第一汽车集团"
+ HNN_faw_motors_organisation_mio_desc:0 "机动机械化设计商\n§L第一汽车集团是中国第一家汽车厂，由重工业部计划成立，被誉为“中国汽车工业的摇篮”。§!"
+ HNN_zhong_gong_ye:0 "中国国家重工业部"
+ HNN_zhong_gong_ye_desc:0 "军工综合管理部门\n§L重工业部为正部级单位，分管全国军工事务。§!"
  HNN_krupp:0 "克努伯股份公司"
  hengyang_arsenal:0 "衡阳兵工厂"
+ HNN_mio_policy_expand_weapon_deals:0 "扩大机械化武器交易"
+ HNN_mio_policy_improved_external_equipment:0 "改进外部设备"
 
+ HNN_faw_research_cic_tt:0 "\n§g提高§H军工机构§!规模，也将提高通过[?CIC_bonus]研究获取的£civ_factory_output §H经济产能盈余§!\n\n在该活动期间，获取的£civ_factory_output §H经济产能盈余§!总值：§W[?total_campaign_CIC]§!§!"
+ HNN_faw_trait_cic_tt:0 "§g每有一级§H军工机构§!规模，通过研究获取的£civ_factory_output §H经济产能盈余§!将额外增加§G+250§!§!"
+ HNN_zhong_gong_ye_arsenal_organisation_unlock:0 "已组织重工业部"
+ HNN_faw_motors_organisation_unlock:0 "已建立一汽集团"
+ HNN_tiema_organisation_unlock:0 "已建立第二机械工业部"
  hunan_base_tt:0 "该国策将根据合适的政治发展自动完成。"
  HNN_attraction_of_foreign_investment:0 "§Y设法吸引外部的注意，促使其来我省投资。§!"
  HNN_reforming_status_quo:0 "§Y采用激励措施来改革经济现状。§!"
@@ -1315,11 +1325,11 @@
  HNN_Lin_Bo_Qu: "林伯渠" 
  POLITICS_HNN_LIN_Bo_Qu_DESC:0 "林伯渠生于湖南省临澧县修梅镇凉水井村，其父林鸿仪为晚清禀生。1902年考入湖南公立西路师范学堂，1904年官费留学日本早稻田大学攻读经济学。1905年加入同盟会，参加辛亥革命。1920年任孙中山大元帅府参议期间，经李大钊介绍接触工团主义思想。\n\n1926年任国民革命军第六军党代表兼政治部主任，参与北伐战争。大革命失败后秘密转入地下，利用其财政专长在上海为工团党筹措经费。1931年进入湖南三省边界根据地，主持建立苏区财政体系，首创「竹签代币」解决银元短缺问题。\n\n作为根据地「钱袋子」，他制定累进税制保障红军供给，同时通过白区关系网建立秘密贸易线，用桐油、茶叶从汉口换回药品和军火。其发明的「四联单」物资管理制度，使有限资源在逐次反围剿中发挥最大效能。这位蓄着八字胡的理财专家，用算盘为革命开辟了另一条战线。如今他临危受命担任国家主席，他会依旧以自己的方式将革命进行下去。"
  HNN_chen_bo_da_sec:0 "陈伯达"
- HNN_chen_bo_da_sec_desc:0 "§Y生于：§!§L1904年7月29日；大清帝国、广东省泉州市惠安县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L陈伯达，1919年考入厦门集美师范学校。1924年到上海，任《厦声报》驻上海记者，同时在上海大学文学系学习，接触工团主义思想。1925年春回厦门，加入中国国民党，随即赴广州入中山大学文学院。1926年，任国民党汕头市党部秘书。在此认识同乡、时驻汕头国民革命军独立团团长张贞，当上张贞的秘书。北伐战争开始，张贞团攻下福州，扩编为国民革命军独立第四师，张贞任师长，陈伯达任师长秘书，福州军事干部学校政治教官，少校军衔。北伐战争失败后，陈伯达逃亡上海，加入中国工团党。后被安排秘密前往法国巴黎学习，结识同样身处巴黎的周恩来、张宗可等人，思想随之激进化，他认为正是工团主义思想的怯懦导致了大革命的失败。§!"
+ HNN_chen_bo_da_sec_desc:0 "§Y生于：§!§L1904年7月29日；大清帝国、广东省泉州市惠安县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L陈伯达，1919年考入厦门集美师范学校。1924年到上海，任《厦声报》驻上海记者，同时在上海大学文学系学习，接触工团主义思想。1925年春回厦门，加入中国国民党，随即赴广州入中山大学文学院。1926年，任国民党汕头市党部秘书。在此认识同乡、时驻汕头国民革命军独立团团长张贞，当上张贞的秘书。北伐战争开始，张贞团攻下福州，扩编为国民革命军独立第四师，张贞任师长，陈伯达任师长秘书，福州军事干部学校政治教官，少校军衔。北伐战争失败后，陈伯达逃亡上海，加入中国工团党。后被安排秘密前往法国巴黎学习，结识同样身处巴黎的周恩来、张宗可等人，思想随之激进化，他认为正是工团主义思想的怯懦导致了大革命的失败。党必须更加团结一致，更加强硬，任何对资产阶级的妥协都是对无产阶级的背叛。§!"
  HNN_wang_he_shou_sec:0 "王鹤寿"
  HNN_wang_he_shou_sec_desc:0 "§Y生于：§!§L1909年4月19日；大清帝国、河北省唐县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L王鹤寿，小名“春江”，在五兄弟排行第三。1925年4月加入中国工团主义青年团，同年10月，加入中国工团党。1925年间，担任罗章龙的“交通”，住在北京奶子府，送文件时被捕第一次入狱。其后，担任全国铁路总工会石家庄分会秘书、全国铁路总工会干事。大革命后长期在天津组织工团党地下工作，多次被捕入狱，由于长时间的受刑、戴脚铐导致两腿严重变形，因无医无药导致的淋巴结核破溃导致脖子上留下疤痕。尽管在政治上，普遍认为王鹤寿属于极权派的一份子，但是同时他支持周恩来等人所提出的“又红又专”理念。§!"
  HNN_zhao_zi_yang_eco:0 "赵紫阳"
- HNN_zhao_zi_yang_eco_desc:0 "§Y生于：§!§L1919年10月17日；大清帝国、河南省滑县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L赵紫阳，原名赵修业1919年10月17日生于河南滑县桑村乡赵庄。父亲赵廷宾，字良乡，又名秋喜，家中有数十亩田地，是当地的一位地主，但平日乐善好施，得村民爱戴；他与发妻刘氏得一子，取名赵修业。1927年，赵紫阳进入位于桑村乡的县立第十七小学读书。1932年6月在桑村小学的一间简陋的教室里宣誓加入中国工青团，后由于工团党准备的夏季滑县暴动和其他起义遭镇压，地下党组织解散，赵修业与组织失去联系。1933年夏天，赵成功考取开封的省立初级中学（今开封高中），中学时期，他成绩优异，多次获得校方颁发的奖学金。上海起义爆发时，赵及其同学在开封声援上海。1936年，赵考入武昌高级中学。在武汉，他将自己的名字改为紫阳。并重新与在湖南的党组织取得联系，恢复党员身份。在工团党的革命胜利前，赵紫阳便是党内小有名气的中层干部，深受党和人民的信任。§!"
+ HNN_zhao_zi_yang_eco_desc:0 "§Y生于：§!§L1919年10月17日；大清帝国、河南省滑县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L赵紫阳，原名赵修业1919年10月17日生于河南滑县桑村乡赵庄。父亲赵廷宾，字良乡，又名秋喜，家中有数十亩田地，是当地的一位地主，但平日乐善好施，得村民爱戴；他与发妻刘氏得一子，取名赵修业。1927年，赵紫阳进入位于桑村乡的县立第十七小学读书。1932年6月在桑村小学的一间简陋的教室里宣誓加入中国工青团，后由于工团党准备的夏季滑县暴动和其他起义遭镇压，地下党组织解散，赵修业与组织失去联系。1933年夏天，赵成功考取开封的省立初级中学（今开封高中），中学时期，他成绩优异，多次获得校方颁发的奖学金。上海起义爆发时，赵及其同学在开封声援上海。1936年，赵考入武昌高级中学。在武汉，他将自己的名字改为紫阳。并重新与在湖南的党组织取得联系，恢复党员身份。在工团党的革命胜利前，赵紫阳便是党内小有名气的中层干部，深受党和人民的信任。他认为党的革命应该更加温和，中国需要一个资本主义的过渡阶段才能进入社会主义社会。§!"
  HNN_Shang_Kun_sec:0 "杨尚昆"
  HNN_Shang_Kun_sec_desc:0 "§Y生于：§!§L1907年8月3日；大清帝国、四川省遂宁县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L杨尚昆1925年接触工团主义，随后在其胞兄烈士杨闇公的带领下走上革命道路，1926年，由青年团团员转为工团党党员；入上海大学学习，并参加了上海工人第一次、第二次武装起义的筹备工作。大革命失败后在组织的安排下重新回到四川工作，1936年四川根据地被军阀捣毁后同邓小平等人一同回到湖南。先后任宣传干事、组织机关报刊《红色中华》和《斗争》、红一军政治部主任等职务。§!"
  HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
@@ -1477,12 +1487,13 @@
  HNN_chun_jie_de_jun_de3_desc:0 "起来，起来！不愿做奴隶的人们！把我们的血肉，筑成我们新的长城！中华民族到了最危险的时候，每个人被迫着发出最后的吼声。起来！起来！起来！我们万众一心，冒着敌人的炮火，前进！冒着敌人的炮火，前进！前进！前进！进！"
  HNN_chantiers_de_la_jeunesse:0 "军事化青年团"
  HNN_chantiers_de_la_jeunesse_desc:0 "为了祖国的荣光！"
- HNN_american_peoples_navy:0 "新海军计划"
+ HNN_american_peoples_navy:0 "新海军士官计划"
  HNN_revolutionary_naval_industry_1:0 "革命海军工业计划"
  HNN_revolutionary_naval_industry_2:0 "革命海军工业计划"
  HNN_revolutionary_naval_industry_3:0 "革命海军工业计划"
  HNN_revolutionary_naval_industry_4:0 "革命海军工业计划"
  HNN_continental_marines:0 "海军陆战队"
+ HNN_attack_submarine_idea:0 "海底杀手"
  HNN_attack_fed_SZC_idea:0 "推翻四川反革命政府"
  HNN_attack_fed_YUN_idea:0 "推翻云南反革命政府"
  HNN_attack_fed_GXC_idea:0 "推翻两广反革命政府"
@@ -1664,19 +1675,27 @@
  HNN_dui_hai_da_ji_desc:0 "随着战争的激化，我们对空军的需求也会越来越大，我们必须做出改变，精简流水线，扩大生产量。"
 
  HNN_PROC_navy:0 "从头开始"
- HNN_PROC_navy_desc:0 "我们的海军完全是一片空白，但是大洋对岸的敌人不会给我们太多时间让我们发展一支庞大的海军，我们必须争分夺秒"
+ HNN_PROC_navy_desc:0 "我们的海军完全是一片空白，仅有的是北洋水师所残余的舰艇和一些老旧的船只，我们不得不从头开始建设我们的海洋力量，这将是一个漫长的过程，但大洋彼岸的敌人不会给我们太多的时间..."
  HNN_revolutionary_naval_industry:0 "革命海军工业"
- HNN_revolutionary_naval_industry_desc:0 "虽然我们目前的工厂和船坞数目不可能与其他海洋霸权国家相提并论，但是我们可以专注于某种舰型以集中产能。"
+ HNN_revolutionary_naval_industry_desc:0 "虽然我们目前的工厂和船坞数目不可能与其他海洋霸权国家相提并论，但是我们依旧可以专注于那些更加容易制造的舰型来扩大我们的产能。"
+ HNN_garden_of_explosives:0 "水雷战术"
+ HNN_garden_of_explosives_desc:0 "相对于战舰，水雷的低造价和易于铺设，同时又能对敌舰造成巨大的威胁，如果敌人想要清除就得花费铺设成本的10倍到200倍，这将是一个非常划算的买卖。"
+ HNN_attack_submarine_brigades:0 "潜艇战术"
+ HNN_attack_submarine_brigades_desc:0 "潜艇是海军中最具威胁的武器之一，相对而言建设一艘潜艇的成本要低廉许多，我们能够在短时间内组织一支有战斗力的海洋单位。"
  HNN_old_wan:0 "北洋军官的余热"
  HNN_old_wan_desc:0 "尽管我们的海军是从头开始，但是北洋政府并非没有相应计划，他们培养出了一大批优秀的海军军官，也许我们可以让他们重操旧业。"
  HNN_zhe_new:0 "新海军计划"
- HNN_zhe_new_desc:0 "既然是重头开始，那么我们就需要完全重新开始，不能使用北洋军的那些老古董们，也不能受资本主义国家海军传统的影响。"
+ HNN_zhe_new_desc:0 "既然是重头开始，那么我们就需要完全重新开始，不能使用北洋军的那些老古董们，也不能受资本主义国家海军传统的影响。有大批的青年才俊希望投身到海军事业中，我们必须让那些旧时代的军官早日退休，让新人们能够在海军中大展拳脚。"
  HNN_zao_chuan_chang:0 "大型船厂计划"
  HNN_zao_chuan_chang_desc:0 "在革命斗争中，大多数现有船厂都遭受了设施和人员两方面的不同程度损失。我们海军重整计划的第二步即主要着眼于修复旧设施并改良现有设施；从世界上购买新型图纸，建设大型造船厂。"
- HNN_revolution_on_high_seas:0 "海上霸主"
- HNN_revolution_on_high_seas_desc:0 "航空母舰的威力在如今的战争中已经初见端倪，为了守卫我们的海洋，我们必须对此加大投资。当然也不能影响我们的其他船只建造工作。"
+ HNN_revolution_on_high_seas:0 "翻新江南造船厂"
+ HNN_revolution_on_high_seas_desc:0 "作为洋务运动的重要成果，江南造船厂是中国首屈一指的造船中心，但是在北洋政府时期，它的技术水平已经落后于世界先进水平。我们需要对它进行翻新，建设成一个现代化的造船厂。"
  HNN_cruisers:0 "中国巡洋舰现代化方案"
- HNN_cruisers_desc:0 "作为海军改革工作的一部分，我们还应该对轻巡洋舰等大型舰船进行现代化改造。中国有着巨大的工业潜力，毫无疑问，随着时间的推移，我们将能够实现雄心勃勃的巡洋舰现代化工作，创建与哪怕是最强大的对手旗鼓相当的民国海军。"
+ HNN_cruisers_desc:0 "作为海军改革工作的一部分，我们还应该对轻巡洋舰等大型舰船进行现代化改造。中国有着巨大的工业潜力，毫无疑问，随着时间的推移，我们将能够实现雄心勃勃的巡洋舰现代化工作，创建与哪怕是最强大的对手旗鼓相当的中国海军。"
+ HNN_expand_personnel_reserves:0 "扩充预备海员"
+ HNN_expand_personnel_reserves_desc:0 "虽然常被忽视，但海军和陆军一样，都需要大批的人力。扩充预备海员的规模将让我们能够迅速弥补损失。"
+ HNN_naval_engineers:0 "海军工程师"
+ HNN_naval_engineers_desc:0 "我们需要加强水兵们的工程培训，让他们能够在海上进行必要的维修工作。我们需要让他们学会如何在海上进行一些简单的维修工作，毕竟我们的海军还处于初期阶段，很多时候我们都需要依靠水兵们的自我修复能力。"
  HNN_deng_lu_ji_hua:0 "海军陆战队"
  HNN_deng_lu_ji_hua_desc:0 "我们也不能忽视海军陆战队。现在我国拥有漫长的海岸线，我们需要确保军队中有专门从事在河流、湖泊和海洋等地形作战的士兵，这样才能为可能遇到的任何作战情况做好准备。巴特勒声称，即使现在还看不出来，但这些海军陆战队之后将会变得很重要。就像我们的士兵在陆地上作战一样，红海军陆战队也会在滩涂上奋战。"
  HNN_liberty_ships:0 "商业护航"
@@ -1974,13 +1993,16 @@
  HNN_dang_zheng_jun:0 "党政军合一"
  HNN_dang_zheng_jun2:0 "党政军合一"
  HNN_su_wei_ai_gong_tuan:0 "苏维埃工团"
+ HNN_su_wei_ai_gong_tuan_desc:0 "工团是工人阶级的组织，苏维埃是无产阶级的先锋队，我们的党是无产阶级的政党。"
  HNN_inter_coop_idea:0 "红色专家"
  HNN_inter_coop_idea2:0 "红色专家"
  HNN_inter_coop_idea3:0 "中国科学院"
  HNN_inter_coop_idea4:0 "中国科学院"
  HNN_inter_coop_idea5:0 "中国科学院"
  HNN_media_help_idea:0 "媒体管制"
+ HNN_media_help_idea_desc:0 "媒体是舆论的风向标，舆论是革命的风向标。我们必须要控制媒体，控制舆论。"
  HNN_socdem:0 "教育平等"
+ HNN_socdem_desc:0 "教育是一个人最重要的投资，教育平等是我们必须要追求的目标，在无产阶级的国度里任何人都有权接受教育。"
  HNN_inter_coop_idea6:0 "科学崇拜"
  HNN_inter_coop_idea6_desc:0 "如果这个世界上人们需要什么信仰的话，那么信仰科学是最好的选择，科学永远不会像神佛那般虚无缥缈。"
  HNN_xin_jing_ji:0 "新经济体制"
@@ -2031,13 +2053,13 @@
  HNN_half_Social_economy6_desc:0 "不管黑猫白猫，能捉到老鼠就是好猫。"
  HNN_ming_zhu_ping_deng:0 "民族平等"
  HNN_tu_gai_1:0 "土地改革:§R严重失败§!"
- HNN_tu_gai_1_desc:0 "§R我们搞砸了§!"
+ HNN_tu_gai_1_desc:0 "§R我们搞砸了一切§!"
  HNN_tu_gai_2:0 "土地改革:§R终获失败§!"
- HNN_tu_gai_2_desc:0 "§R我们搞砸了§!"
+ HNN_tu_gai_2_desc:0 "§R我们搞砸了一切§!"
  HNN_tu_gai_3:0 "土地改革:§R勉勉强强§!"
- HNN_tu_gai_3_desc:0 "我们完成了土地改革，但其成果既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。我们做了，但又似乎什么都没有改变。"
+ HNN_tu_gai_3_desc:0 "我们自称完成了土地改革，但其成果既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。我们做了，但又似乎什么都没有改变。"
  HNN_tu_gai_4:0 "土地改革:§R差强人意§!"
- HNN_tu_gai_4_desc:0 "我们完成了土地改革，但其成果既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。我们作乱，但这只好于我们什么都没有做。"
+ HNN_tu_gai_4_desc:0 "我们自称完成了土地改革，但其成果既没有得到贫农们的认可，也没有取悦到地主们，所有人都对现状不满。我们做了，但这只好于我们什么都没有做。"
  HNN_tu_gai_5:0 "土地改革:§R皆大欢喜§!"
  HNN_tu_gai_5_desc:0 "拍巴掌唱小调，又有棉花又有稻。又有花生蚕豆六谷(玉米)泡，土地改革人人笑。"
  HNN_tu_gai_6:0 "土地改革:§R大获成功§!"
@@ -2045,12 +2067,13 @@
  HNN_tu_gai_7:0 "土地改革:§R试图挽回§!"
  HNN_tu_gai_7_desc:0 "我们搞砸了，但是我们需要挽回失败的情况。"
  HNN_tu_gai_8:0 "土地改革:§R试图挽回§!"
- HNN_tu_gai_8_desc:0 "我们搞砸了，但是我们需要挽回失败的情况。"
+ HNN_tu_gai_8_desc:0 "我们搞砸了，我们正在尝试挽回这一切，这很难，但我们必须坚持下去。"
  HNN_tu_gai_9:0 "土地改革:§R信誉重生§!"
  HNN_tu_gai_9_desc:0 "我们搞砸了，我们正在挽回这一切，而农民们已经开始准备原谅我们。"
  HNN_tu_gai_10:0 "土地改革:§R热情高涨§!"
  HNN_tu_gai_10_desc:0 "我们搞砸了，但是我们成功挽救了这一切，如今农民们已经原谅了我们，并重新对我们的党和政府充满信任，他们将在生产中投入更高的热情。"
  HNN_red_navy_idea:0 "海军计划"
+ HNN_red_navy_idea_desc:0 "我们需要一支强大的海军来保护我们的海洋利益，捍卫我们的海洋领土。"
  HNN_autonomous_region:0 "少数民族自治区"
  HNN_peoples_commune:0 "人民公社"
  HNN_industrial_region: "经济特区"
@@ -2367,44 +2390,24 @@
  HNN_chi_jiao_yi_sheng:0 "训练赤脚医生"
  HNN_chi_jiao_yi_sheng_desc:0 "亦农亦医，农忙时务农，农闲时行医，白天务农，晚上行医"
 
- HNN_heat_them:0 "解锁决议£GFX_decision_icon_small §G§!§Y输出革命§!"
  HNN_let_he_in:0 "邀请其他社会主义盟友加入"
- HNN_let_he_in_desc:0 "我们将邀请其他社会主义伙伴尤其是亚洲的伙伴们加入我们的队伍"
+ HNN_let_he_in_desc:0 "我们将邀请其他社会主义伙伴尤其是亚洲的伙伴们加入我们的队伍，去建设国际无产阶级运动。"
  HNN_invite_into_economic_sphere:0 "邀请其他社会主义盟友加入亚太经济互助委员会"
- HNN_let_VAN:0 "邀请[VIN.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_SIA:0 "邀请[SIA.GetNameWithFlag]加入[ROOT.GetFactionName]
- HNN_let_BRM:0 "邀请[BRM.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_BHC:0 "邀请[BHC.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_BHU:0 "邀请[BHU.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_SKM:0 "邀请[SKM.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_AFG:0 "邀请[AFG.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_PER:0 "邀请[PER.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_AST:0 "邀请[AST.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_TRM:0 "邀请[TRM.GetNameWithFlag]加入[ROOT.GetFactionName]"
- HNN_let_NYC:0 "邀请[NYC.GetNameWithFlag]加入[ROOT.GetFactionName]"
+ HNN_INVITING_SOMEONE:0 "正在邀请他人加入我们的阵营"
+ HNN_asia_let_them_in_targeted_decision:0 "邀请[From.GetNameWithFlag]加入[ROOT.GetFactionName]"
+ PRC_tech_gourp_name:0 "国际科学技术合作协会"
+ PRC_tech_gourp_desc:0 "引进来，走出去，我们要在国际上建立一个科学技术合作协会，促进各国之间的科学技术交流与合作。"
+ HNN_build_PRC_tech_gourp:0 "成立国际科学技术合作协会"
+ PRC_tech_gourp_decisions:0 "联盟事务"
+ HNN_join_CAISTC_decision:0 "加入中国国际科学技术合作协会"
 
+ HNN_heat_them:0 "解锁决议£GFX_decision_icon_small §G§!§Y输出革命§!"
  HNN_shu_chu_ge_min:0 "输出革命"
  HNN_shu_chu_ge_min_desc:0 "瓦解帝国主义与资本主义！"
- HNN_het_GEA:0 "瓦解[GEA.GetNameWithFlag]的腐朽统治"
- HNN_het_SIA:0 "瓦解[SIA.GetNameWithFlag]的腐朽统治"
- HNN_het_BRM:0 "瓦解[BRM.GetNameWithFlag]的腐朽统治"
- HNN_het_BHC:0 "瓦解[BHC.GetNameWithFlag]的腐朽统治"
- HNN_het_BEH:0 "瓦解[DEH.GetNameWithFlag]的腐朽统治"
- HNN_het_PRF:0 "瓦解[PRF.GetNameWithFlag]的腐朽统治"
- HNN_het_MAD:0 "瓦解[MAD.GetNameWithFlag]的腐朽统治"
- HNN_het_BHU:0 "瓦解[BHU.GetNameWithFlag]的腐朽统治"
- HNN_het_SKM:0 "瓦解[SKM.GetNameWithFlag]的腐朽统治"
- HNN_het_NEP:0 "瓦解[NEP.GetNameWithFlag]的腐朽统治"
- HNN_het_AFG:0 "瓦解[AFG.GetNameWithFlag]的腐朽统治"
- HNN_het_PER:0 "瓦解[PER.GetNameWithFlag]的腐朽统治"
- HNN_het_ALO:0 "瓦解[ALO.GetNameWithFlag]的腐朽统治"
- HNN_het_KYR:0 "瓦解[KYR.GetNameWithFlag]的腐朽统治"
- HNN_het_TRK:0 "瓦解[TRK.GetNameWithFlag]的腐朽统治"
- HNN_het_UZB:0 "瓦解[UZB.GetNameWithFlag]的腐朽统治"
- HNN_het_PHI:0 "瓦解[PHI.GetNameWithFlag]的腐朽统治"
- HNN_het_DEI:0 "瓦解[DEI.GetNameWithFlag]的腐朽统治"
- HNN_het_AST:0 "瓦解[AST.GetNameWithFlag]的腐朽统治"
- HNN_het_NZL:0 "瓦解[NZL.GetNameWithFlag]的腐朽统治"
+ HNN_shu_chu_ge_min_targeted_decision:0 "瓦解[FROM.GetNameWithFlag]的腐朽统治"
+ HNN_mid_asia_shu_chu_ge_min_targeted_decision:0 "瓦解[FROM.GetNameWithFlag]的腐朽统治"
+ HNN_soea_asia_shu_chu_ge_min_targeted_decision:0 "瓦解[FROM.GetNameWithFlag]的腐朽统治"
+ HNN_three_international_shu_chu_ge_min_targeted_decision:0 "摧毁[FROM.GetNameWithFlag]的修正主义分子"
  HNN_het_RUS:0 "瓦解[RUS.GetNameWithFlag]的腐朽统治"
  HNN_het_TRM:0 "瓦解[TRM.GetNameWithFlag]的腐朽统治"
 
@@ -3316,8 +3319,8 @@
  hungong.133.t:0 "人民英雄纪念碑竣工"
  hungong.133.d:0 "历时三年，人民英雄纪念碑终于竣工了。碑通高37.94米，占地约3，100平方米，由碑身、须弥座和台基三部分组成。碑体平面呈长方形，顶为盝顶。碑身用413块花岗石分32层垒砌而成。正面（北面）碑心是一整块石材，长14.7米、宽2.9米、厚1米、重103吨，镌刻着中华人民共和国国家主席[HNN.GetNameDef]题写的“人民英雄永垂不朽”八个鎏金大字。背面碑心由7块石材构成，内容为周恩来书写的人民英雄碑文。\n\n碑身由林徽因设计的两层须弥座承托。上层小须弥座的四面刻牡丹、荷花、菊花、垂幔等拼成的八个花环，以示对烈士的崇敬之情。下层大须弥座的束腰部镶嵌着十幅巨大的汉白玉浮雕，其中八幅作品反映了中国近现代史上的革命事件，按东南西北的顺序依次为“虎门销烟”、“金田起义”、“武昌起义”、“五四运动”、“五卅运动”、“三大根据地”、“上海大罢工”、“抗日战争”和“解放全中国”。这些浮雕的高度均为2米，宽2至6.4米，总长40.68米，一共雕刻了172个人物，由刘开渠等人设计创作。\n\n纪念碑的台基也分为两层，上层呈方形，下层呈海棠形，东西宽50.44米，南北长61.5米。两层台基的四面均为栏杆环绕，并设有台阶。整座人民英雄纪念碑共用1.7万块花岗石和汉白玉石砌成，面对天安门，肃穆庄严，雄伟壮观。它整合了明清以来的汉民族建筑与希腊罗马建筑的风格，并与北京城的中轴线相呼应。碑心石取自青岛浮山。\n\n在浮雕上塑造的172个人物形象中，没有一个具体的历史人物或英雄人物。因为历史是人民创造的，人民是历史的真正的主人。也是在一位位无名烈士的鲜血中才铸就了今日的新中国。"
  hungong.133.a:0 "人民英雄永垂不朽"
- hungong.134.t:0 "[ROOT.GetFactionName]的邀请"
- hungong.134.d:0 " "
+ hungong.134.t:0 "来自中国的邀请"
+ hungong.134.d:0 "中国的同志们带来了他们的邀请，他们希望我们加入他们的阵营，与他们一同为了社会主义革命而奋斗。"
  hungong.134.a:0 "我们同意"
  hungong.134.b:0 "我们拒绝"
  hungong.135.t:0 "轻重缓急"
