--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -112,7 +112,7 @@
  guides.12.d:0 "问：德属奥斯曼？\n\n答：沙漠战争开打后接受德国援助，十天后再次接受德国援助，两周后将军队交给德国控制，最后再等上个二十天即可。\n德属奥斯曼的全部线路都可以在完成所有国策后收复巴尔干的失地，中线的奥本海姆有泛伊斯兰的宣称，右线的莱斯有泛阿拉伯的战争目标。\n\n问：国家民粹主义/极权主义奥斯曼（骨干运动）？\n\n答：首先你可以在“最高安全局的处境”事件中选择现代化，来触发凯末尔被刺。\n或者选择将他们全部清洗然后在“阴谋对抗大维齐尔”事件中选择静观其变来触发凯末尔被刺。\n然后在凯末尔被刺的一系列事件后，选择让费夫齐帕夏夺取党的控制权。\n完成他的国策树，结束紧急状态。\n在接下来的国策树里选择集中国家权力和整合骨干运动，并一路完成民粹国策树。\n在完成最后一个国策树后，原本的奥斯曼爆破事件将不再发生，取而代之的是你可以选择是要保留苏丹，还是废除苏丹并转化为国家民粹或极权的共和国。\n\n问：社保伊斯兰线/家独专制线/哈里发线？（原本是KR中的陷阱路线，KX对其进行了改造，移除了陷阱，增加了新的国策、可成立国家和核心）\n\n答：让自由派联盟上台，方法如下：\n凯末尔教育改革失败。\n凯末尔要求解散议会时，让苏丹炒掉凯末尔。\n选自由协约党。\n\n之后进入社保线：\n让保守派代表的支持率低于零，苏丹就会出手干预，萨巴哈丁亲王下台，沙基卜·阿尔斯兰成为大维齐尔，穆罕默德联盟党掌权，转入社保线。\n\n正常走国策树，“旧哈里发”点完五十天后，军中的凯末尔主义者会政变：\n要走家独专制线，让苏丹挫败政变，解锁右边的国策树分支。\n要走社保伊斯兰线，让苏丹承认实行温和的伊斯兰宪法，解锁左边的国策树分支。\n\n点完中间共通分支的最后一个国策“泛伊斯兰帝国”后可以成立奥斯曼哈里发国，并获得穆斯林世界的核心。（两天后可以通过事件选择新的国名：奥斯曼哈里发国、最高朴特哈里发国或哈里发国）"
  guides.12.a:0 "哇哦"
  guides.14.t:0 "国民党左派指南"
- guides.14.d: "问：汪精卫？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡。完成第三次归正大会国策前，保证权力平衡偏向汪精卫的程度大于激进度。作为汪精卫赢得权力平衡后，一共有三条统一后的子路线。\n主席汪精卫默认解锁。\n如果极权主义支持度高于25%，革命家汪精卫就会解锁。\n如果社会民主主义支持度高于25%，政治家汪精卫就会解锁。\n\n问：宋庆龄罢免汪主席？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡，站在宋庆龄一边。完成第三次归正大会国策前，保证权力平衡偏向宋庆龄的程度大于激进度。作为宋庆龄赢得权力平衡后，一共有四条子路线。\n红色拿破仑默认解锁。\n如果社会自由主义支持度高于25%，先总理遗教就会解锁。\n如果工团主义支持度高于25%，且中工盟的领导派系是世界社，大同之梦就会解锁。\n如果工团主义支持度高于25%，且中工盟的领导派系是工团党正统派，农工联盟就会解锁。\n\n问：胡宗南二次国民革命？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡。完成第三次归正大会国策前，保证激进度大于权力平衡偏向任何一方的程度。在国民党内战中，让胡宗南的“复兴社阴谋”实力高于其他三方。胡宗南有两条子路线。\n红色委员长默认解锁。\n如果极权主义支持度高于35%，民族复兴就会解锁。\n\n问：陈公博反政变？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡。完成第三次归正大会国策前，保证激进度大于权力平衡偏向任何一方的程度。在国民党内战中，让陈公博的北京政府实力高于其他三方。赢得内战后，陈公博有两条子路线。\n主席遗志默认解锁。\n如果极权主义支持度高于40%，革命世界观就会解锁。\n\n问：工团和邓演达？\n答：进入宋庆龄线，完成$CHI_convene_the_peoples_congress$国策（这要求工团主义支持率高于25%），人民代表大会事件中选择“让空想家浪费时间去吧”，镇压及其后果事件中选择“邓演达错了”，邓演达会政变，你可以选择他或者工团党做领袖。（工团党将解锁特殊的工团路线，邓演达则进入红色拿破仑路线）\n\n问：蒋介石和戴笠？\n答：进入胡宗南线，完成$CHI_proclaim_permanent_purge$国策。在爆炸撼动首都和中特局遭到指控事件中选第二个选项。戴笠上台后，完成他的初始国策树，直到没法继续往下点，然后他与蒋介石的事件链会开始，全选择利于蒋的选项的话，蒋就会赢得斗争，成功政变。如果想继续戴笠线的话，就都选择利于戴的选项就行了。"
+ guides.14.d: "问：汪精卫？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡。完成第三次归正大会国策前，保证权力平衡偏向汪精卫的程度大于激进度。作为汪精卫赢得权力平衡后，一共有三条统一后的子路线。\n“授权总统秘党”为默认路线。\n如果极权主义支持度高于25%，则解锁“走向激进改组”。\n如果社会民主主义支持度高于25%，则解锁“承诺临时宪法”。\n\n问：宋庆龄罢免汪主席？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡，站在宋庆龄一边。完成第三次归正大会国策前，保证权力平衡偏向宋庆龄的程度大于激进度。作为宋庆龄赢得权力平衡后，一共有四条子路线。\n红色拿破仑默认解锁。\n如果社会自由主义支持度高于25%，先总理遗教就会解锁。\n如果工团主义支持度高于25%，且中工盟的领导派系是世界社，大同之梦就会解锁。\n如果工团主义支持度高于25%，且中工盟的领导派系是工团党正统派，农工联盟就会解锁。\n\n问：胡宗南二次国民革命？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡。完成第三次归正大会国策前，保证激进度大于权力平衡偏向任何一方的程度。在国民党内战中，让胡宗南的“复兴社阴谋”实力高于其他三方。胡宗南有两条子路线。\n红色委员长默认解锁。\n如果极权主义支持度高于35%，民族复兴就会解锁。\n\n问：陈公博反政变？\n答：完成第一次归正大会国策后，你将解锁汪宋权力平衡。完成第三次归正大会国策前，保证激进度大于权力平衡偏向任何一方的程度。在国民党内战中，让陈公博的北京政府实力高于其他三方。赢得内战后，陈公博有两条子路线。\n主席遗志默认解锁。\n如果极权主义支持度高于40%，革命世界观就会解锁。\n\n问：工团和邓演达？\n答：进入宋庆龄线，完成$CHI_convene_the_peoples_congress$国策（这要求工团主义支持率高于25%），人民代表大会事件中选择“让空想家浪费时间去吧”，镇压及其后果事件中选择“邓演达错了”，邓演达会政变，你可以选择他或者工团党做领袖。（工团党将解锁特殊的工团路线，邓演达则进入红色拿破仑路线）\n\n问：蒋介石和戴笠？\n答：进入胡宗南线，完成$CHI_proclaim_permanent_purge$国策。在爆炸撼动首都和中特局遭到指控事件中选第二个选项。戴笠上台后，完成他的初始国策树，直到没法继续往下点，然后他与蒋介石的事件链会开始，全选择利于蒋的选项的话，蒋就会赢得斗争，成功政变。如果想继续戴笠线的话，就都选择利于戴的选项就行了。"
  guides.14.a:0 "哇哦"
  guides.15.t:0 "奥地利帝国指南"
  guides.15.d:0 "你想玩哪个国家？"
@@ -191,7 +191,7 @@
  guides.35.d:0 "问：德克萨斯的各种路线？（民主，加纳/德克萨斯至上党，军政府，社会主义者和德士古）\n\n答：第一步，让德克萨斯独立（简短教程：朗选上总统，把德克萨斯问题送至最高法院，然后选择他们没有义务，在流血的德克萨斯发生时选择有太多工作要做，不让奥尔雷德辞职，不要宣布独立公投，内战爆发时需要你的tag仍为USA）\n\n民主德克萨斯：4个初始候选人中选一位；为确保民主——如果选了林登·约翰逊就不要让格思里进政府，或当你选了加纳就不要宣布戒严；不要让德士古政变\n\n左翼德克萨斯：初选选林登·约翰逊，然后同意与恶魔的交易，让格思里进政府，然后让格思里取代约翰逊成为总统，或者你可以完成你的美国内战国策树成为联合工团傀儡，或者设置开局游戏规则“美国内战中的德克萨斯”为“忠于联合工团”，这会使你在内战开启后成为他们的傀儡。\n\n拓展加纳权力：初选选加纳，在达纳斯广场爆炸后宣布戒严。完成他自己的国策树，重写德克萨斯州宪法，解锁更多专属国策树。\n\n石油大亨掌权：德士古相关事件触发后，会解锁德士古影响力的权力平衡机制。提高德士古的影响力，解锁对抗政府的决议，点选之后再同时贿赂军队和警察。德士古将在一段时间后政变。（注：需要尽快完成德士古的国策树，否则军队会政变。）\n\n折断长剑：让德士古政变，不完成他们专属国策树（注：需完成第一个国策），等待军队政变，你可以选哪个将军来领导军政府。\n\n德克萨斯至上党：设置“内战中的德克萨斯”游戏规则为“忠于联盟国”。这会使朗接受德克萨斯作为名义上独立的傀儡，可在内战中提供协助。\n\n德克萨斯王国：玩德克萨斯，让军队政变（参考上文折断长剑），等待任命文职总统的事件。任命安德鲁·杰克逊·休斯顿，完成他的国策树。如果你与德国或协约国结盟，他最终将加冕为君主。在君主国策树的尽头，将触发一个事件，允许你让休斯顿死去，选择一位新的君主。或者，如果你与太平洋国结盟，而他们走了诺顿路线，你可以绕过军政府国策，立即宣布转为君主制（你可以与诺顿结盟，但无法让他成为德克萨斯之王）"
  guides.35.a:0 "哇哦"
  guides.36.t:0 "宪政国指南"
- guides.36.d:0 "问：巴顿？\n\n答：让威廉·H·默里选上合众国总统，同意太平洋国停火协议。在接下来的事件中，默里会因为亲太平洋国而被迫辞职，之后可以选择巴顿、林德伯格、罗素和西蒙斯的三K党（注：除罗素外，宪政国与太平洋国都是不可能实现和平的，接受和平协议总会导致默里下台，除非默里主动退让）。选择西蒙斯线的话，等他死亡后，巴顿也可以在事件链中发动政变上台（西蒙斯死后，拒绝黑色军团，不逮捕斯蒂芬森，不揭露阴谋，然后杀死斯蒂芬森）。\n\n问：理查德·罗素的温和社会保守主义宪政国？\n\n答：1936选举让默里当合众国总统，等宪政国爆出来后切换为宪政国。与太平洋国签署和平协定，默里下台，选罗素上台。注意：如果未能稳定局势，罗素会被尤金·塔尔梅奇政变（旧日的争斗再度开始），这会触发一个事件，你可以选择罗素保住位置或者被塔尔梅奇赶下台，而斯特罗姆·瑟蒙德和詹姆斯·伯恩斯可能会是罗素手下的政府首脑。只有罗素可以和太平洋国签署停战协定。还有，林德伯格和三K党可能政变罗素，如果他过度的激怒了他们或者搞砸的事情太多。完整的反政变指南在做了，下次一定。\n\n问：巴顿的继承者？\n\n答：玩巴顿，点他的国策，等待一个事件决定巴顿的副总统是谁。选择莫斯利，则在之后的一个事件里让巴顿退休并让莫斯利接任，开启莫斯利继任者国策树。选择偏向民主的副总统，完成重组党派国策，等待巴顿退休并举行选举的事件，可以选瑟蒙德、伯恩斯、伯德、麦卡锡、瓦达曼上台，如果选伯恩斯的话，之后还可以让乔治·华莱士和卢琳·华莱士上。\n\n问：克伦普的社会机器？\n\n答：玩罗素，完成反腐国策，在事件中逮捕克伦普，让克伦普在下一个事件里政变成功。\n\n问：林博的四十八州委员会？\n\n答：先走罗素或者克伦普线。然后在他们的第一个任期（4年）之后，你就能在宪政国的第一次民主选举的各路党派中（林德伯格、罗素、四种意识形态的四十八州委员会和克伦普）中选出四十八州委员会。四十八州委员会可以选择由老拉什·林博领导的社民线、阿尔·戈尔的家长社保线、威廉·亚历山大·珀西的基督教民主市自线、格雷夫斯的人道资本主义或社自民粹迪克西线。他们共用一个国策树，但社自格雷夫斯还有一个动态国策树，他可以与三K党结盟并使其更加人性化，而不是将其粉碎。"
+ guides.36.d:0 "问：巴顿？\n\n答：让威廉·H·默里选上合众国总统，同意太平洋国停火协议。在接下来的事件中，默里会因为亲太平洋国而被迫辞职，之后可以选择巴顿、林德伯格、拉塞尔和西蒙斯的三K党（注：除拉塞尔外，宪政国与太平洋国都是不可能实现和平的，接受和平协议总会导致默里下台，除非默里主动退让）。选择西蒙斯线的话，等他死亡后，巴顿也可以在事件链中发动政变上台（西蒙斯死后，拒绝黑色军团，不逮捕斯蒂芬森，不揭露阴谋，然后杀死斯蒂芬森）。\n\n问：理查德·拉塞尔的温和社会保守主义宪政国？\n\n答：1936选举让默里当合众国总统，等宪政国爆出来后切换为宪政国。与太平洋国签署和平协定，默里下台，选拉塞尔上台。注意：如果未能稳定局势，拉塞尔会被尤金·塔尔梅奇政变（旧日的争斗再度开始），这会触发一个事件，你可以选择拉塞尔保住位置或者被塔尔梅奇赶下台，而斯特罗姆·瑟蒙德和詹姆斯·伯恩斯可能会是拉塞尔手下的政府首脑。只有拉塞尔可以和太平洋国签署停战协定。还有，林德伯格和三K党可能政变拉塞尔，如果他过度的激怒了他们或者搞砸的事情太多。完整的反政变指南在做了，下次一定。\n\n问：巴顿的继承者？\n\n答：玩巴顿，点他的国策，等待一个事件决定巴顿的副总统是谁。选择莫斯利，则在之后的一个事件里让巴顿退休并让莫斯利接任，开启莫斯利继任者国策树。选择偏向民主的副总统，完成重组党派国策，等待巴顿退休并举行选举的事件，可以选瑟蒙德、伯恩斯、伯德、麦卡锡、瓦达曼上台，如果选伯恩斯的话，之后还可以让乔治·华莱士和卢琳·华莱士上。\n\n问：克伦普的社会机器？\n\n答：玩拉塞尔，完成反腐国策，在事件中逮捕克伦普，让克伦普在下一个事件里政变成功。\n\n问：林博的四十八州委员会？\n\n答：先走拉塞尔或者克伦普线。然后在他们的第一个任期（4年）之后，你就能在宪政国的第一次民主选举的各路党派中（林德伯格、拉塞尔、四种意识形态的四十八州委员会和克伦普）中选出四十八州委员会。四十八州委员会可以选择由老拉什·林博领导的社民线、阿尔·戈尔的家长社保线、威廉·亚历山大·珀西的基督教民主市自线、格雷夫斯的人道资本主义或社自民粹迪克西线。他们共用一个国策树，但社自格雷夫斯还有一个动态国策树，他可以与三K党结盟并使其更加人性化，而不是将其粉碎。"
  guides.36.a:0 "哇哦"
  guides.37.t:0 "宪政国指南"
  guides.37.d:0 "问：宪政国的无形帝国线？\n\n答：游玩宪政国，在白人联盟军的晋升事件中选择“当然”，在“全国白人联盟的扩张”事件中选择“我们无能为力”。之后，西蒙斯会召开特别大会并在会上当选，解锁“无形帝国”国策。完成西蒙斯的最后一个国策几个月后，西蒙斯会暴毙，你可以选择由新三K党、旧三K党或阿姆斯特朗接管政权，三K党的具体接班人选取决于国策的选择，如果在1942年8月前未能走完国策树，则由巴顿接手。\n\n问：旧三K党/新三k党/阿姆斯特朗/福特线？\n\n答：要让旧三K党掌权，需要在西蒙斯死后允许埃芬格和黑色军团合作，然后他们就会政变（重要事项：如果在“黑夜之怖”国策后的两个事件中不让黑色军团自由攻击芝加哥和教会，埃芬格就会政变斯蒂芬森）。\n要让新三K党掌权，需要在西蒙斯死后允许巴顿逮捕斯蒂芬森并杀了他的同伙，然后新三K党就会政变。\n要让阿姆斯特朗掌权，就不要让巴顿抓斯蒂芬森，并在下一个事件中揭露阴谋，然后让军队宣誓效忠（注意，三K党的路线会导致黑带共和国的力量扩张，你有可能会激怒他们，所以做好准备）。\n如果要进入福特线的话，就不要同意白人联盟军的晋升并同意福特的所有要求，林德伯格就会掌权。\n\n以上是进入各个路线的最直接方式，也有别的更麻烦的方法，例如新三K党政变林德伯格（不要晋升白人联盟军，福特说啥都答应他，林德伯格就会掌权，然后会触发七十六骑士团招募者被杀的事件，逮捕白人联盟的领导者，而不是不管他们，然后三K党就会政变你）或者新三K党政变阿姆斯特朗（如果阿姆斯特朗为获取最高权力而杀死了新三K党的老成员，然后他的政策又出了问题或者未能处理好天花流行，就会触发洛克威尔或约基的政变）。\n\n问：宪政国菲茨休主义线？\n\n答：先进阿姆斯特朗线，正常游玩，在“天花大流行”事件出现后选择“信念会见证我们度过难关”，然后在“天花流行加剧”事件中选择“该打扫屋子了”，最后在“克里斯蒂安斯的阴谋警告”中选择“迁就这个疯子，同意私下见面”，在后续事件中克里斯蒂安斯便会掌权。"
@@ -315,7 +315,7 @@
  ALO_guidesnum:0 "§C阿拉什斡耳朵§!有§G1§!条路线指南。\n包括§O奥伦堡与乌拉尔斯克路线§!。"
  TRK_guidesnum:0 "§C突厥斯坦§!有§G1§!条路线指南。"
  UZB_guidesnum:0 "§C布哈拉§!有§G1§!条路线指南。"
- DKB_guidesnum:0 "§C顿河和卡尔梅克§!有§G2§!条路线指南。"
+ DKB_guidesnum:0 "§C顿河§!有§G6§!条路线指南。\n包括§O卡尔梅克路线§!。"
  KUB_guidesnum:0 "§C库班§!有§G1§!条路线指南。"
  MTR_guidesnum:0 "§C山地共和国§!有§G1§!条路线指南。"
  guides.76.t:0 "红俄指南"
@@ -348,7 +348,7 @@
  guides.86.a:0 "哇哦"
  guides.86.b:0 "送我去卡尔梅克"
  guides.87.t:0 "卡尔梅克指南"
- guides.87.d:0 "问：怎样选择卡尔梅克？\n\n答：开局选顿河共和国。等事件选择卡尔梅克。点完“卡尔梅克重生”国策之后会有一个事件“独立！”，然后你就可以选各条路线了。\n第一个选项是社会主义线。\n第二个选项是民主路线。\n第三个选项是通杜托夫汗，别忘了点他的国策。\n第四个选项是佛教徒，同样别忘了点国策。\n\n问：怎么触发黑喇嘛卡尔梅克\n\n答：设置蒙古走极权路线。选卡尔梅克并走民粹路线。等待黑喇嘛逃来卡尔梅克事件，选择让他上台。除了获得对蒙古和中亚的宣战理由外，国策树与普通民粹一样"
+ guides.87.d:0 "问：卡尔梅克的各条路线？\n\n答：开局选顿河共和国。克拉斯诺夫死后等事件选择卡尔梅克，在“冲突升级”事件中进行路线选择。\n选择“通杜托夫推翻了奥奇罗夫政府”，进入阿斯特拉罕哥萨克军团/丹赞汗线。\n选择“通杜托夫撤走了哥萨克”，进入民主选举路线，可以选激社、社民、社自、威民、民粹。\n\n问：黑喇嘛？\n\n答：设置蒙古走极权路线。选卡尔梅克并走民粹路线。等待黑喇嘛逃来卡尔梅克的事件，选择让其上台，可以获得蒙古和中亚的战争目标。"
  guides.87.a:0 "哇哦"
  guides.87.b:0 "回到顿河共和国"
  guides.88.t:0 "库班指南"
@@ -529,7 +529,7 @@
  guides.134.a:0 "哇哦"
  AFG_guidesnum:0 "§C阿富汗§!有§G10§!条路线指南。"
  guides.133.t:0 "美利坚合众国指南"
- guides.133.d:0 "问：国家人民党/平民党？\n\n答：大选选陷入僵局，用加纳避免内战就能在40年选举中选平民党（进步派、社会主义派），用诺里斯避免内战能在40年选国家人民党（民族派）。\n\n问：和平建立白劳德的联合工团/布拉德利政变？\n\n答：进入平民党路线，选白劳德做民粹派的候选人。\n具体方法：\n- 与诺里斯和艾肯谈崩，但不要与辛克莱谈崩。\n- 第一场演讲选里德。\n- 第二场演讲选白劳德。\n- 让厄尔·朗提名休伊·朗。\n\n40年大选选白劳德，接着走平民党国策树，要触发政变，具体做法如下：\n- 用格斯·霍尔换掉埃德加·胡佛。\n- 完成国策“终结崩溃源头”，在事件“华尔街的命运”中选摧毁华尔街。\n- 完成国策“人民法院”，在事件“最高法院的变动”中选“……以及正确的裁决”。\n- 完成国策“选举人团制度的命运”，在同名事件中选废除选举人团制度。\n- 完成国策“第二次制宪会议”。\n\n完成上述所有步骤后就会触发政变，可以选布拉德利政变（威民，解锁三巨头国策树）、白劳德极权派政变（可以变身联合工团）或者维持激社。\n\n问：国家人民党和平建立宪政国/霍尔德里奇的社民军政府？\n\n答：选除社保的小理查德·罗素之外的任意国家人民党人，走完整条国策树。等上个两周左右，霍尔德里奇会发动政变。霍尔德里奇的军政府属于社民，政府是进步派，有原住民做副总统，国策树用的是正常的社民国策树。霍尔德里奇政变几天后巴顿会反政变，成功即可变身宪政国，再过几天就可以在巴顿、默里、罗素、克伦普路线之间进行选择了。"
+ guides.133.d:0 "问：国家人民党/平民党？\n\n答：大选选陷入僵局，用加纳避免内战就能在40年选举中选平民党（进步派、社会主义派），用诺里斯避免内战能在40年选国家人民党（民族派）。\n\n问：和平建立白劳德的联合工团/布拉德利政变？\n\n答：进入平民党路线，选白劳德做民粹派的候选人。\n具体方法：\n- 与诺里斯和艾肯谈崩，但不要与辛克莱谈崩。\n- 第一场演讲选里德。\n- 第二场演讲选白劳德。\n- 让厄尔·朗提名休伊·朗。\n\n40年大选选白劳德，接着走平民党国策树，要触发政变，具体做法如下：\n- 用格斯·霍尔换掉埃德加·胡佛。\n- 完成国策“终结崩溃源头”，在事件“华尔街的命运”中选摧毁华尔街。\n- 完成国策“人民法院”，在事件“最高法院的变动”中选“……以及正确的裁决”。\n- 完成国策“选举人团制度的命运”，在同名事件中选废除选举人团制度。\n- 完成国策“第二次制宪会议”。\n\n完成上述所有步骤后就会触发政变，可以选布拉德利政变（威民，解锁三巨头国策树）、白劳德极权派政变（可以变身联合工团）或者维持激社。\n\n问：国家人民党和平建立宪政国/霍尔德里奇的社民军政府？\n\n答：选除社保的小理查德·拉塞尔之外的任意国家人民党人，走完整条国策树。等上个两周左右，霍尔德里奇会发动政变。霍尔德里奇的军政府属于社民，政府是进步派，有原住民做副总统，国策树用的是正常的社民国策树。霍尔德里奇政变几天后巴顿会反政变，成功即可变身宪政国，再过几天就可以在巴顿、默里、拉塞尔、克伦普路线之间进行选择了。"
  guides.133.a:0 "哇哦"
  guides.133.b:0 "返回"
  BRY_guidesnum:0 "§C布里亚特§!有§G4§!条路线指南。"
@@ -568,6 +568,7 @@
  guides.142.d: "一、奥伦堡哥萨克线：1、引发阿拉什斡耳朵内战，在内战开始前不要同哥萨克谈判。\n2、奥伦堡哥萨克军团的实力大于29%时，在决议中将其解散。\n\n二、哥萨克联合军团：完成国策“哥萨克联合阵线”。"
  guides.143.t: "乌拉尔哥萨克指南"
  guides.143.d: "一、放出乌拉尔哥萨克：1、引发阿拉什内战（请参照阿拉什指南第4点布尔什维克里的内容），在内战开始前不要同哥萨克谈判。\n2、乌拉尔哥萨克军团的实力大于29%时，在决议中将其解散。\n\n二、阿塔曼托尔斯托夫：在“两家之争”中逮捕博罗丁。在minigame里击败哈萨克人。\n\n三、阿塔曼博罗丁：在“两家之争”中不要逮捕博罗丁。在minigame里击败哈萨克人。\n\n四、奥伊尔维拉耶：在minigame里击败所有的阿塔曼。（最好选择托尔斯托夫上台）"
+ KLY_guidesnum:0 "§C卡尔梅克§!有§G3§!条路线指南。"
 
 
 
