--- a/localisation/QD_military_industrial_organization_l_simp_chinese.yml
+++ b/localisation/QD_military_industrial_organization_l_simp_chinese.yml
@@ -12,7 +12,7 @@
  imz_upgrade_1_5: "进一步标准化部件"
  imz_upgrade_2_1: "竞争支部的影响"
  imz_upgrade_2_2: "敲定部件标准化"
- imz_upgrade_3_1: "改革济南兵工厂"
+ imz_upgrade_3_1: "整合整体工业"
  amo_upgrade_1: "延长摩托化引擎寿命"
  amo_upgrade_2: "延长坦克引擎寿命"
  amo_upgrade_3: "延长机械化引擎寿命"
@@ -25,6 +25,7 @@
  amo_upgrade_2_1: "清洁燃料"
  amo_upgrade_2_2: "优质燃料"
  amo_upgrade_3_1: "改进青岛四方机车车辆"
+ amo_upgrade_3_2: "加大研发投入"
  bmz_upgrade_2: "扩展济南铁路"
  bmz_upgrade_1: "风帽穿甲弹弹药"
  bmz_upgrade_2: "扩展北方路线"
@@ -87,8 +88,8 @@
  putilovets_upgrade_1_1: "加固合金"
  putilovets_upgrade_dozer: "改进推土装备"
  putilovets_upgrade_1_2: "侧裙甲"
- putilovets_upgrade_2_1: "改进铁马空气压缩厂"
- putilovets_upgrade_2_1_soc_rus: "改进铁马空气压缩厂"
+ putilovets_upgrade_2_1: "扩大国有投资"
+ putilovets_upgrade_2_1_soc_rus: "扩大国有投资"
  putilovets_upgrade_3_1: "望远瞄具"
  putilovets_upgrade_4_1: "增加炮口初速"
  putilovets_upgrade_4_2: "楔形炮闩"
